c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_parse/trailing_comma_decl.c
/* Trailing commas aren't permitted in parameter lists */
int foo(int a,) {
    return a + 1;
}

int main(void) {
    return foo(4);
}